Fix the returned buffer access flags when they are internally modified.

TEST=TransformFeedback.GetBufferParameteriv

BUG=754000

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I30d76f41a3f0b2927717933bb3335580a4020368
Reviewed-on: https://chromium-review.googlesource.com/614053
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Geoff Lang <geofflang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494515}
Former-commit-id: bd8dfe9049b597af4568c15e9c1654e17d81937f